# game-of-life

./: Life.hs  README.md  game-of-life.cabal  stack.yaml
app/: Main.hs
src/: Life.hs
src/Data/Function/: Blackbird.hs
src/Life/: Life.hs  Pattern.hs
