name:                game-of-life
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/amar47shah/game-of-life#readme
license:             BSD3
license-file:        LICENSE
author:              Amar Shah
maintainer:          amar47shah@gmail.com
copyright:           2016 Amar Shah
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Life, Data.Function.Blackbird
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable game-of-life-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , process
                     , game-of-life
  default-language:    Haskell2010

test-suite game-of-life-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , game-of-life
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/amar47shah/game-of-life
